--- a/Login page/from.css
+++ b/Login page/from.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to left, #6a11cb, #15d461);
+  background: linear-gradient(to left, #2c2ce4, #04df5c);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -10,40 +10,40 @@ body {
 }
 
 .login-container {
-  background-color:orange, white;
+  background-color: rgb(250, 251, 249);
   padding: 40px;
   border-radius: 10px;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px rgba(11, 0, 0, 0.9);
   width: 300px;
 }
 
-.login-container h2 {
+.login-container h1 {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #150101;
 }
 
 form label {
   display: block;
   margin-bottom: 5px;
-  color: #555;
+  color: #0b0000;
 }
 
 form input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 1.8px solid #ccc;
+  border-radius: 25px;
 }
 
 form button {
   width: 100%;
-  padding: 10px;
+  padding: 16px;
   background-color: #2575fc;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 15px;
   cursor: pointer;
   font-weight: bold;
 }
